1999-02-16  Samuel Tardieu  <sam@inf.enst.fr>

	* constants.c, config.h.in: Use string.h if present, needed on
	Digital Unix.

	* makedall: New script that updates the debugging scripts
	automatically.

	* DALL, UNDALL, DALL.el, UNDALL.el: Updated using makedall.

	* s-garstr.adb: Dump streams only when a specific key *and*
	S_GARSTR are set to avoid clobbering the output with large dumps.

	* s-gartcp.adb: Do not try to connect with a peer that has no
	location (light PCS for example).

	* s-garuni.adb: Minor reformatting.
	(Store_New_Unit): Change name New_Unit_Info to Current_Info as the 
	former was misleading. Add more debugging info. A unit can be in
	the Queried state after a failure if the client needs it anyway,
	so this state must be considered when receiving new information
	about the unit.
	(Read_Units): Initialize List which was used uninitialized.
	(Answer_Pending_Requests): Do not share the Params_Stream_Type
	between different answers.

1999-02-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Check that system.garlic.debug is
	the first garlic elaborated package.

	* s-garexc.adb: Add visibility on system.garlic.debug.

	* s-parint.adb: Move Delete_Termination_Sanity_File to the very
	last shutdown step.
	
	* s-ganobl.adb (C_Accept): When Thin.C_Accept fails and Errno is
	Eagain, try again later.

	* s-garfil.adb, s-garfil.ads, s-gafizi.adb, s-gafizi.ads,
 	s-garhea.adb: Remove a copy of stream element array.

1999-02-01  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garuti.adb: Avoid recursion in "<" operator by converting
	arguments into Integers.

1999-01-31  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.adb: Define No_Version which is the initialized value
 	of a watcher and which can no longer be reached once this watcher
 	is used. Substitute Commit by Lookup. Add a function "<" for
 	Version_Id.

	* s-gartab.adb, s-gartcp.adb, s-garuti.ads, s-rpc.adb: Substitute
	Commit by Lookup.
